--- a/uni_modules/ucs-css/colors/cyan/var.scss
+++ b/uni_modules/ucs-css/colors/cyan/var.scss
@@ -1,12 +1,12 @@
 // Cyan / 碧涛青
-$ucs-color-cyan: #14C9C9;
-$ucs-color-cyan-1: #E8FFFB;
-$ucs-color-cyan-2: #B7F4EC;
-$ucs-color-cyan-3: #89E9E0;
-$ucs-color-cyan-4: #5EDFD6;
-$ucs-color-cyan-5: #37D4CF;
-$ucs-color-cyan-6: #14C9C9;
-$ucs-color-cyan-7: #0DA5AA;
-$ucs-color-cyan-8: #07828B;
-$ucs-color-cyan-9: #03616C;
-$ucs-color-cyan-10: #00424D;
+$ucs-color-cyan: #14C9C9 !default;
+$ucs-color-cyan-1: #E8FFFB !default;
+$ucs-color-cyan-2: #B7F4EC !default;
+$ucs-color-cyan-3: #89E9E0 !default;
+$ucs-color-cyan-4: #5EDFD6 !default;
+$ucs-color-cyan-5: #37D4CF !default;
+$ucs-color-cyan-6: #14C9C9 !default;
+$ucs-color-cyan-7: #0DA5AA !default;
+$ucs-color-cyan-8: #07828B !default;
+$ucs-color-cyan-9: #03616C !default;
+$ucs-color-cyan-10: #00424D !default;
