--- a/uni_modules/ucs-css/colors/gold/var.scss
+++ b/uni_modules/ucs-css/colors/gold/var.scss
@@ -1,12 +1,12 @@
 // Gold / 黄昏
-$ucs-color-gold: #F7BA1E;
-$ucs-color-gold-1: #FFFCE8;
-$ucs-color-gold-2: #FDF4BF;
-$ucs-color-gold-3: #FCE996;
-$ucs-color-gold-4: #FADC6D;
-$ucs-color-gold-5: #F9CC45;
-$ucs-color-gold-6: #F7BA1E;
-$ucs-color-gold-7: #CC9213;
-$ucs-color-gold-8: #A26D0A;
-$ucs-color-gold-9: #774B04;
-$ucs-color-gold-10: #4D2D00;
+$ucs-color-gold: #F7BA1E !default;
+$ucs-color-gold-1: #FFFCE8 !default;
+$ucs-color-gold-2: #FDF4BF !default;
+$ucs-color-gold-3: #FCE996 !default;
+$ucs-color-gold-4: #FADC6D !default;
+$ucs-color-gold-5: #F9CC45 !default;
+$ucs-color-gold-6: #F7BA1E !default;
+$ucs-color-gold-7: #CC9213 !default;
+$ucs-color-gold-8: #A26D0A !default;
+$ucs-color-gold-9: #774B04 !default;
+$ucs-color-gold-10: #4D2D00 !default;
