--- a/uni_modules/ucs-css/colors/green/var.scss
+++ b/uni_modules/ucs-css/colors/green/var.scss
@@ -1,12 +1,12 @@
 // Green / 仙野绿
-$ucs-color-green: #00B42A;
-$ucs-color-green-1: #E8FFEA;
-$ucs-color-green-2: #AFF0B5;
-$ucs-color-green-3: #7BE188;
-$ucs-color-green-4: #4CD263;
-$ucs-color-green-5: #23C343;
-$ucs-color-green-6: #00B42A;
-$ucs-color-green-7: #009A29;
-$ucs-color-green-8: #008026;
-$ucs-color-green-9: #006622;
-$ucs-color-green-10: #004D1C;
+$ucs-color-green: #00B42A !default;
+$ucs-color-green-1: #E8FFEA !default;
+$ucs-color-green-2: #AFF0B5 !default;
+$ucs-color-green-3: #7BE188 !default;
+$ucs-color-green-4: #4CD263 !default;
+$ucs-color-green-5: #23C343 !default;
+$ucs-color-green-6: #00B42A !default;
+$ucs-color-green-7: #009A29 !default;
+$ucs-color-green-8: #008026 !default;
+$ucs-color-green-9: #006622 !default;
+$ucs-color-green-10: #004D1C !default;
