--- a/uni_modules/ucs-css/colors/grey/var.scss
+++ b/uni_modules/ucs-css/colors/grey/var.scss
@@ -1,12 +1,14 @@
-// Red / 浪漫红
-$ucs-color-red: #F53F3F;
-$ucs-color-red-1: #FFECE8;
-$ucs-color-red-2: #FDCDC5;
-$ucs-color-red-3: #FBACA3;
-$ucs-color-red-4: #F98981;
-$ucs-color-red-5: #F76560;
-$ucs-color-red-6: #F53F3F;
-$ucs-color-red-7: #CB272D;
-$ucs-color-red-8: #A1151E;
-$ucs-color-red-9: #770813;
-$ucs-color-red-10: #4D000A;
+// Grey / 中性灰
+$ucs-color-grey: #a9aeb8 !default;
+$ucs-color-grey-1: #ffffff !default;
+$ucs-color-grey-2: #f7f8fa !default;
+$ucs-color-grey-3: #f2f3f5 !default;
+$ucs-color-grey-4: #e5e6eb !default;
+$ucs-color-grey-5: #c9cdd4 !default;
+$ucs-color-grey-6: #a9aeb8 !default;
+$ucs-color-grey-7: #86909c !default;
+$ucs-color-grey-8: #6b7785 !default;
+$ucs-color-grey-9: #4e5969 !default;
+$ucs-color-grey-10: #272e3b !default;
+$ucs-color-grey-11: #1d2129 !default;
+$ucs-color-grey-12: #141414 !default;
