--- a/uni_modules/ucs-css/colors/lime/var.scss
+++ b/uni_modules/ucs-css/colors/lime/var.scss
@@ -1,12 +1,12 @@
 // Lime / 新生绿
-$ucs-color-lime: #9FDB1D;
-$ucs-color-lime-1: #FCFFE8;
-$ucs-color-lime-2: #EDF8BB;
-$ucs-color-lime-3: #DCF190;
-$ucs-color-lime-4: #C9E968;
-$ucs-color-lime-5: #B5E241;
-$ucs-color-lime-6: #9FDB1D;
-$ucs-color-lime-7: #7EB712;
-$ucs-color-lime-8: #5F940A;
-$ucs-color-lime-9: #437004;
-$ucs-color-lime-10: #2A4D00;
+$ucs-color-lime: #9FDB1D !default;
+$ucs-color-lime-1: #FCFFE8 !default;
+$ucs-color-lime-2: #EDF8BB !default;
+$ucs-color-lime-3: #DCF190 !default;
+$ucs-color-lime-4: #C9E968 !default;
+$ucs-color-lime-5: #B5E241 !default;
+$ucs-color-lime-6: #9FDB1D !default;
+$ucs-color-lime-7: #7EB712 !default;
+$ucs-color-lime-8: #5F940A !default;
+$ucs-color-lime-9: #437004 !default;
+$ucs-color-lime-10: #2A4D00 !default;
