--- a/uni_modules/ucs-css/colors/orange/var.scss
+++ b/uni_modules/ucs-css/colors/orange/var.scss
@@ -1,12 +1,12 @@
-// Red / 浪漫红
-$ucs-color-red: #F53F3F;
-$ucs-color-red-1: #FFECE8;
-$ucs-color-red-2: #FDCDC5;
-$ucs-color-red-3: #FBACA3;
-$ucs-color-red-4: #F98981;
-$ucs-color-red-5: #F76560;
-$ucs-color-red-6: #F53F3F;
-$ucs-color-red-7: #CB272D;
-$ucs-color-red-8: #A1151E;
-$ucs-color-red-9: #770813;
-$ucs-color-red-10: #4D000A;
+// Orange / 活力橙
+$ucs-color-orange: #FF7D00 !default;
+$ucs-color-orange-1: #FFF7E8 !default;
+$ucs-color-orange-2: #FFE4BA !default;
+$ucs-color-orange-3: #FFCF8B !default;
+$ucs-color-orange-4: #FFB65D !default;
+$ucs-color-orange-5: #FF9A2E !default;
+$ucs-color-orange-6: #FF7D00 !default;
+$ucs-color-orange-7: #D25F00 !default;
+$ucs-color-orange-8: #A64500 !default;
+$ucs-color-orange-9: #792E00 !default;
+$ucs-color-orange-10: #4D1B00 !default;
