--- a/uni_modules/ucs-css/colors/orangered/index.scss
+++ b/uni_modules/ucs-css/colors/orangered/index.scss
@@ -2,114 +2,114 @@
 /**
  * 背景色
  */
-.bg-red{background-color: $ucs-color-red;}
-.bg-red-1{background-color: $ucs-color-red-1;}
-.bg-red-2{background-color: $ucs-color-red-2;}
-.bg-red-3{background-color: $ucs-color-red-3;}
-.bg-red-4{background-color: $ucs-color-red-4;}
-.bg-red-5{background-color: $ucs-color-red-5;}
-.bg-red-6{background-color: $ucs-color-red-6;}
-.bg-red-7{background-color: $ucs-color-red-7;}
-.bg-red-8{background-color: $ucs-color-red-8;}
-.bg-red-9{background-color: $ucs-color-red-9;}
-.bg-red-10{background-color: $ucs-color-red-10;}
+.bg-orangered{background-color: $ucs-color-orangered;}
+.bg-orangered-1{background-color: $ucs-color-orangered-1;}
+.bg-orangered-2{background-color: $ucs-color-orangered-2;}
+.bg-orangered-3{background-color: $ucs-color-orangered-3;}
+.bg-orangered-4{background-color: $ucs-color-orangered-4;}
+.bg-orangered-5{background-color: $ucs-color-orangered-5;}
+.bg-orangered-6{background-color: $ucs-color-orangered-6;}
+.bg-orangered-7{background-color: $ucs-color-orangered-7;}
+.bg-orangered-8{background-color: $ucs-color-orangered-8;}
+.bg-orangered-9{background-color: $ucs-color-orangered-9;}
+.bg-orangered-10{background-color: $ucs-color-orangered-10;}
 /**
  * 文本色
  */
-.color-red{color: $ucs-color-red;}
-.color-red-1{color: $ucs-color-red-1;}
-.color-red-2{color: $ucs-color-red-2;}
-.color-red-3{color: $ucs-color-red-3;}
-.color-red-4{color: $ucs-color-red-4;}
-.color-red-5{color: $ucs-color-red-5;}
-.color-red-6{color: $ucs-color-red-6;}
-.color-red-7{color: $ucs-color-red-7;}
-.color-red-8{color: $ucs-color-red-8;}
-.color-red-9{color: $ucs-color-red-9;}
-.color-red-10{color: $ucs-color-red-10;}
+.color-orangered{color: $ucs-color-orangered;}
+.color-orangered-1{color: $ucs-color-orangered-1;}
+.color-orangered-2{color: $ucs-color-orangered-2;}
+.color-orangered-3{color: $ucs-color-orangered-3;}
+.color-orangered-4{color: $ucs-color-orangered-4;}
+.color-orangered-5{color: $ucs-color-orangered-5;}
+.color-orangered-6{color: $ucs-color-orangered-6;}
+.color-orangered-7{color: $ucs-color-orangered-7;}
+.color-orangered-8{color: $ucs-color-orangered-8;}
+.color-orangered-9{color: $ucs-color-orangered-9;}
+.color-orangered-10{color: $ucs-color-orangered-10;}
 /**
  * 边框色
  */
-.border-red{border-color: $ucs-color-red;}
-.border-red-1{border-color: $ucs-color-red-1;}
-.border-red-2{border-color: $ucs-color-red-2;}
-.border-red-3{border-color: $ucs-color-red-3;}
-.border-red-4{border-color: $ucs-color-red-4;}
-.border-red-5{border-color: $ucs-color-red-5;}
-.border-red-6{border-color: $ucs-color-red-6;}
-.border-red-7{border-color: $ucs-color-red-7;}
-.border-red-8{border-color: $ucs-color-red-8;}
-.border-red-9{border-color: $ucs-color-red-9;}
-.border-red-10{border-color: $ucs-color-red-10;}
+.border-orangered{border-color: $ucs-color-orangered;}
+.border-orangered-1{border-color: $ucs-color-orangered-1;}
+.border-orangered-2{border-color: $ucs-color-orangered-2;}
+.border-orangered-3{border-color: $ucs-color-orangered-3;}
+.border-orangered-4{border-color: $ucs-color-orangered-4;}
+.border-orangered-5{border-color: $ucs-color-orangered-5;}
+.border-orangered-6{border-color: $ucs-color-orangered-6;}
+.border-orangered-7{border-color: $ucs-color-orangered-7;}
+.border-orangered-8{border-color: $ucs-color-orangered-8;}
+.border-orangered-9{border-color: $ucs-color-orangered-9;}
+.border-orangered-10{border-color: $ucs-color-orangered-10;}
 
-.border-t-red{border-top-color: $ucs-color-red;}
-.border-t-red-1{border-top-color: $ucs-color-red-1;}
-.border-t-red-2{border-top-color: $ucs-color-red-2;}
-.border-t-red-3{border-top-color: $ucs-color-red-3;}
-.border-t-red-4{border-top-color: $ucs-color-red-4;}
-.border-t-red-5{border-top-color: $ucs-color-red-5;}
-.border-t-red-6{border-top-color: $ucs-color-red-6;}
-.border-t-red-7{border-top-color: $ucs-color-red-7;}
-.border-t-red-8{border-top-color: $ucs-color-red-8;}
-.border-t-red-9{border-top-color: $ucs-color-red-9;}
-.border-t-red-10{border-top-color: $ucs-color-red-10;}
+.border-t-orangered{border-top-color: $ucs-color-orangered;}
+.border-t-orangered-1{border-top-color: $ucs-color-orangered-1;}
+.border-t-orangered-2{border-top-color: $ucs-color-orangered-2;}
+.border-t-orangered-3{border-top-color: $ucs-color-orangered-3;}
+.border-t-orangered-4{border-top-color: $ucs-color-orangered-4;}
+.border-t-orangered-5{border-top-color: $ucs-color-orangered-5;}
+.border-t-orangered-6{border-top-color: $ucs-color-orangered-6;}
+.border-t-orangered-7{border-top-color: $ucs-color-orangered-7;}
+.border-t-orangered-8{border-top-color: $ucs-color-orangered-8;}
+.border-t-orangered-9{border-top-color: $ucs-color-orangered-9;}
+.border-t-orangered-10{border-top-color: $ucs-color-orangered-10;}
 
-.border-b-red{border-bottom-color: $ucs-color-red;}
-.border-b-red-1{border-bottom-color: $ucs-color-red-1;}
-.border-b-red-2{border-bottom-color: $ucs-color-red-2;}
-.border-b-red-3{border-bottom-color: $ucs-color-red-3;}
-.border-b-red-4{border-bottom-color: $ucs-color-red-4;}
-.border-b-red-5{border-bottom-color: $ucs-color-red-5;}
-.border-b-red-6{border-bottom-color: $ucs-color-red-6;}
-.border-b-red-7{border-bottom-color: $ucs-color-red-7;}
-.border-b-red-8{border-bottom-color: $ucs-color-red-8;}
-.border-b-red-9{border-bottom-color: $ucs-color-red-9;}
-.border-b-red-10{border-bottom-color: $ucs-color-red-10;}
+.border-b-orangered{border-bottom-color: $ucs-color-orangered;}
+.border-b-orangered-1{border-bottom-color: $ucs-color-orangered-1;}
+.border-b-orangered-2{border-bottom-color: $ucs-color-orangered-2;}
+.border-b-orangered-3{border-bottom-color: $ucs-color-orangered-3;}
+.border-b-orangered-4{border-bottom-color: $ucs-color-orangered-4;}
+.border-b-orangered-5{border-bottom-color: $ucs-color-orangered-5;}
+.border-b-orangered-6{border-bottom-color: $ucs-color-orangered-6;}
+.border-b-orangered-7{border-bottom-color: $ucs-color-orangered-7;}
+.border-b-orangered-8{border-bottom-color: $ucs-color-orangered-8;}
+.border-b-orangered-9{border-bottom-color: $ucs-color-orangered-9;}
+.border-b-orangered-10{border-bottom-color: $ucs-color-orangered-10;}
 
-.border-l-red{border-left-color: $ucs-color-red;}
-.border-l-red-1{border-left-color: $ucs-color-red-1;}
-.border-l-red-2{border-left-color: $ucs-color-red-2;}
-.border-l-red-3{border-left-color: $ucs-color-red-3;}
-.border-l-red-4{border-left-color: $ucs-color-red-4;}
-.border-l-red-5{border-left-color: $ucs-color-red-5;}
-.border-l-red-6{border-left-color: $ucs-color-red-6;}
-.border-l-red-7{border-left-color: $ucs-color-red-7;}
-.border-l-red-8{border-left-color: $ucs-color-red-8;}
-.border-l-red-9{border-left-color: $ucs-color-red-9;}
-.border-l-red-10{border-left-color: $ucs-color-red-10;}
+.border-l-orangered{border-left-color: $ucs-color-orangered;}
+.border-l-orangered-1{border-left-color: $ucs-color-orangered-1;}
+.border-l-orangered-2{border-left-color: $ucs-color-orangered-2;}
+.border-l-orangered-3{border-left-color: $ucs-color-orangered-3;}
+.border-l-orangered-4{border-left-color: $ucs-color-orangered-4;}
+.border-l-orangered-5{border-left-color: $ucs-color-orangered-5;}
+.border-l-orangered-6{border-left-color: $ucs-color-orangered-6;}
+.border-l-orangered-7{border-left-color: $ucs-color-orangered-7;}
+.border-l-orangered-8{border-left-color: $ucs-color-orangered-8;}
+.border-l-orangered-9{border-left-color: $ucs-color-orangered-9;}
+.border-l-orangered-10{border-left-color: $ucs-color-orangered-10;}
 
-.border-r-red{border-right-color: $ucs-color-red;}
-.border-r-red-1{border-right-color: $ucs-color-red-1;}
-.border-r-red-2{border-right-color: $ucs-color-red-2;}
-.border-r-red-3{border-right-color: $ucs-color-red-3;}
-.border-r-red-4{border-right-color: $ucs-color-red-4;}
-.border-r-red-5{border-right-color: $ucs-color-red-5;}
-.border-r-red-6{border-right-color: $ucs-color-red-6;}
-.border-r-red-7{border-right-color: $ucs-color-red-7;}
-.border-r-red-8{border-right-color: $ucs-color-red-8;}
-.border-r-red-9{border-right-color: $ucs-color-red-9;}
-.border-r-red-10{border-right-color: $ucs-color-red-10;}
+.border-r-orangered{border-right-color: $ucs-color-orangered;}
+.border-r-orangered-1{border-right-color: $ucs-color-orangered-1;}
+.border-r-orangered-2{border-right-color: $ucs-color-orangered-2;}
+.border-r-orangered-3{border-right-color: $ucs-color-orangered-3;}
+.border-r-orangered-4{border-right-color: $ucs-color-orangered-4;}
+.border-r-orangered-5{border-right-color: $ucs-color-orangered-5;}
+.border-r-orangered-6{border-right-color: $ucs-color-orangered-6;}
+.border-r-orangered-7{border-right-color: $ucs-color-orangered-7;}
+.border-r-orangered-8{border-right-color: $ucs-color-orangered-8;}
+.border-r-orangered-9{border-right-color: $ucs-color-orangered-9;}
+.border-r-orangered-10{border-right-color: $ucs-color-orangered-10;}
 
-.border-x-red{border-right-color: $ucs-color-red;border-left-color: $ucs-color-red;}
-.border-x-red-1{border-right-color: $ucs-color-red-1;border-left-color: $ucs-color-red-1;}
-.border-x-red-2{border-right-color: $ucs-color-red-2;border-left-color: $ucs-color-red-2;}
-.border-x-red-3{border-right-color: $ucs-color-red-3;border-left-color: $ucs-color-red-3;}
-.border-x-red-4{border-right-color: $ucs-color-red-4;border-left-color: $ucs-color-red-4;}
-.border-x-red-5{border-right-color: $ucs-color-red-5;border-left-color: $ucs-color-red-5;}
-.border-x-red-6{border-right-color: $ucs-color-red-6;border-left-color: $ucs-color-red-6;}
-.border-x-red-7{border-right-color: $ucs-color-red-7;border-left-color: $ucs-color-red-7;}
-.border-x-red-8{border-right-color: $ucs-color-red-8;border-left-color: $ucs-color-red-8;}
-.border-x-red-9{border-right-color: $ucs-color-red-9;border-left-color: $ucs-color-red-9;}
-.border-x-red-10{border-right-color: $ucs-color-red-10;border-left-color: $ucs-color-red-10;}
+.border-x-orangered{border-right-color: $ucs-color-orangered;border-left-color: $ucs-color-orangered;}
+.border-x-orangered-1{border-right-color: $ucs-color-orangered-1;border-left-color: $ucs-color-orangered-1;}
+.border-x-orangered-2{border-right-color: $ucs-color-orangered-2;border-left-color: $ucs-color-orangered-2;}
+.border-x-orangered-3{border-right-color: $ucs-color-orangered-3;border-left-color: $ucs-color-orangered-3;}
+.border-x-orangered-4{border-right-color: $ucs-color-orangered-4;border-left-color: $ucs-color-orangered-4;}
+.border-x-orangered-5{border-right-color: $ucs-color-orangered-5;border-left-color: $ucs-color-orangered-5;}
+.border-x-orangered-6{border-right-color: $ucs-color-orangered-6;border-left-color: $ucs-color-orangered-6;}
+.border-x-orangered-7{border-right-color: $ucs-color-orangered-7;border-left-color: $ucs-color-orangered-7;}
+.border-x-orangered-8{border-right-color: $ucs-color-orangered-8;border-left-color: $ucs-color-orangered-8;}
+.border-x-orangered-9{border-right-color: $ucs-color-orangered-9;border-left-color: $ucs-color-orangered-9;}
+.border-x-orangered-10{border-right-color: $ucs-color-orangered-10;border-left-color: $ucs-color-orangered-10;}
 
-.border-y-red{border-top-color: $ucs-color-red;border-bottom-color: $ucs-color-red;}
-.border-y-red-1{border-top-color: $ucs-color-red-1;border-bottom-color: $ucs-color-red-1;}
-.border-y-red-2{border-top-color: $ucs-color-red-2;border-bottom-color: $ucs-color-red-2;}
-.border-y-red-3{border-top-color: $ucs-color-red-3;border-bottom-color: $ucs-color-red-3;}
-.border-y-red-4{border-top-color: $ucs-color-red-4;border-bottom-color: $ucs-color-red-4;}
-.border-y-red-5{border-top-color: $ucs-color-red-5;border-bottom-color: $ucs-color-red-5;}
-.border-y-red-6{border-top-color: $ucs-color-red-6;border-bottom-color: $ucs-color-red-6;}
-.border-y-red-7{border-top-color: $ucs-color-red-7;border-bottom-color: $ucs-color-red-7;}
-.border-y-red-8{border-top-color: $ucs-color-red-8;border-bottom-color: $ucs-color-red-8;}
-.border-y-red-9{border-top-color: $ucs-color-red-9;border-bottom-color: $ucs-color-red-9;}
-.border-y-red-10{border-top-color: $ucs-color-red-10;border-bottom-color: $ucs-color-red-10;}
+.border-y-orangered{border-top-color: $ucs-color-orangered;border-bottom-color: $ucs-color-orangered;}
+.border-y-orangered-1{border-top-color: $ucs-color-orangered-1;border-bottom-color: $ucs-color-orangered-1;}
+.border-y-orangered-2{border-top-color: $ucs-color-orangered-2;border-bottom-color: $ucs-color-orangered-2;}
+.border-y-orangered-3{border-top-color: $ucs-color-orangered-3;border-bottom-color: $ucs-color-orangered-3;}
+.border-y-orangered-4{border-top-color: $ucs-color-orangered-4;border-bottom-color: $ucs-color-orangered-4;}
+.border-y-orangered-5{border-top-color: $ucs-color-orangered-5;border-bottom-color: $ucs-color-orangered-5;}
+.border-y-orangered-6{border-top-color: $ucs-color-orangered-6;border-bottom-color: $ucs-color-orangered-6;}
+.border-y-orangered-7{border-top-color: $ucs-color-orangered-7;border-bottom-color: $ucs-color-orangered-7;}
+.border-y-orangered-8{border-top-color: $ucs-color-orangered-8;border-bottom-color: $ucs-color-orangered-8;}
+.border-y-orangered-9{border-top-color: $ucs-color-orangered-9;border-bottom-color: $ucs-color-orangered-9;}
+.border-y-orangered-10{border-top-color: $ucs-color-orangered-10;border-bottom-color: $ucs-color-orangered-10;}
