--- a/uni_modules/ucs-css/colors/orangered/var.scss
+++ b/uni_modules/ucs-css/colors/orangered/var.scss
@@ -1,12 +1,12 @@
-// Red / 浪漫红
-$ucs-color-red: #F53F3F;
-$ucs-color-red-1: #FFECE8;
-$ucs-color-red-2: #FDCDC5;
-$ucs-color-red-3: #FBACA3;
-$ucs-color-red-4: #F98981;
-$ucs-color-red-5: #F76560;
-$ucs-color-red-6: #F53F3F;
-$ucs-color-red-7: #CB272D;
-$ucs-color-red-8: #A1151E;
-$ucs-color-red-9: #770813;
-$ucs-color-red-10: #4D000A;
+// Orange Red / 晚秋红
+$ucs-color-orangered: #F77234 !default;
+$ucs-color-orangered-1: #FFF3E8 !default;
+$ucs-color-orangered-2: #FDDDC3 !default;
+$ucs-color-orangered-3: #FCC59F !default;
+$ucs-color-orangered-4: #FAAC7B !default;
+$ucs-color-orangered-5: #F99057 !default;
+$ucs-color-orangered-6: #F77234 !default;
+$ucs-color-orangered-7: #CC5120 !default;
+$ucs-color-orangered-8: #A23511 !default;
+$ucs-color-orangered-9: #771F06 !default;
+$ucs-color-orangered-10: #4D0E00 !default;
