--- a/uni_modules/ucs-css/colors/pinkpurple/index.scss
+++ b/uni_modules/ucs-css/colors/pinkpurple/index.scss
@@ -2,114 +2,114 @@
 /**
  * 背景色
  */
-.bg-red{background-color: $ucs-color-red;}
-.bg-red-1{background-color: $ucs-color-red-1;}
-.bg-red-2{background-color: $ucs-color-red-2;}
-.bg-red-3{background-color: $ucs-color-red-3;}
-.bg-red-4{background-color: $ucs-color-red-4;}
-.bg-red-5{background-color: $ucs-color-red-5;}
-.bg-red-6{background-color: $ucs-color-red-6;}
-.bg-red-7{background-color: $ucs-color-red-7;}
-.bg-red-8{background-color: $ucs-color-red-8;}
-.bg-red-9{background-color: $ucs-color-red-9;}
-.bg-red-10{background-color: $ucs-color-red-10;}
+.bg-pinkpurple{background-color: $ucs-color-pinkpurple;}
+.bg-pinkpurple-1{background-color: $ucs-color-pinkpurple-1;}
+.bg-pinkpurple-2{background-color: $ucs-color-pinkpurple-2;}
+.bg-pinkpurple-3{background-color: $ucs-color-pinkpurple-3;}
+.bg-pinkpurple-4{background-color: $ucs-color-pinkpurple-4;}
+.bg-pinkpurple-5{background-color: $ucs-color-pinkpurple-5;}
+.bg-pinkpurple-6{background-color: $ucs-color-pinkpurple-6;}
+.bg-pinkpurple-7{background-color: $ucs-color-pinkpurple-7;}
+.bg-pinkpurple-8{background-color: $ucs-color-pinkpurple-8;}
+.bg-pinkpurple-9{background-color: $ucs-color-pinkpurple-9;}
+.bg-pinkpurple-10{background-color: $ucs-color-pinkpurple-10;}
 /**
  * 文本色
  */
-.color-red{color: $ucs-color-red;}
-.color-red-1{color: $ucs-color-red-1;}
-.color-red-2{color: $ucs-color-red-2;}
-.color-red-3{color: $ucs-color-red-3;}
-.color-red-4{color: $ucs-color-red-4;}
-.color-red-5{color: $ucs-color-red-5;}
-.color-red-6{color: $ucs-color-red-6;}
-.color-red-7{color: $ucs-color-red-7;}
-.color-red-8{color: $ucs-color-red-8;}
-.color-red-9{color: $ucs-color-red-9;}
-.color-red-10{color: $ucs-color-red-10;}
+.color-pinkpurple{color: $ucs-color-pinkpurple;}
+.color-pinkpurple-1{color: $ucs-color-pinkpurple-1;}
+.color-pinkpurple-2{color: $ucs-color-pinkpurple-2;}
+.color-pinkpurple-3{color: $ucs-color-pinkpurple-3;}
+.color-pinkpurple-4{color: $ucs-color-pinkpurple-4;}
+.color-pinkpurple-5{color: $ucs-color-pinkpurple-5;}
+.color-pinkpurple-6{color: $ucs-color-pinkpurple-6;}
+.color-pinkpurple-7{color: $ucs-color-pinkpurple-7;}
+.color-pinkpurple-8{color: $ucs-color-pinkpurple-8;}
+.color-pinkpurple-9{color: $ucs-color-pinkpurple-9;}
+.color-pinkpurple-10{color: $ucs-color-pinkpurple-10;}
 /**
  * 边框色
  */
-.border-red{border-color: $ucs-color-red;}
-.border-red-1{border-color: $ucs-color-red-1;}
-.border-red-2{border-color: $ucs-color-red-2;}
-.border-red-3{border-color: $ucs-color-red-3;}
-.border-red-4{border-color: $ucs-color-red-4;}
-.border-red-5{border-color: $ucs-color-red-5;}
-.border-red-6{border-color: $ucs-color-red-6;}
-.border-red-7{border-color: $ucs-color-red-7;}
-.border-red-8{border-color: $ucs-color-red-8;}
-.border-red-9{border-color: $ucs-color-red-9;}
-.border-red-10{border-color: $ucs-color-red-10;}
+.border-pinkpurple{border-color: $ucs-color-pinkpurple;}
+.border-pinkpurple-1{border-color: $ucs-color-pinkpurple-1;}
+.border-pinkpurple-2{border-color: $ucs-color-pinkpurple-2;}
+.border-pinkpurple-3{border-color: $ucs-color-pinkpurple-3;}
+.border-pinkpurple-4{border-color: $ucs-color-pinkpurple-4;}
+.border-pinkpurple-5{border-color: $ucs-color-pinkpurple-5;}
+.border-pinkpurple-6{border-color: $ucs-color-pinkpurple-6;}
+.border-pinkpurple-7{border-color: $ucs-color-pinkpurple-7;}
+.border-pinkpurple-8{border-color: $ucs-color-pinkpurple-8;}
+.border-pinkpurple-9{border-color: $ucs-color-pinkpurple-9;}
+.border-pinkpurple-10{border-color: $ucs-color-pinkpurple-10;}
 
-.border-t-red{border-top-color: $ucs-color-red;}
-.border-t-red-1{border-top-color: $ucs-color-red-1;}
-.border-t-red-2{border-top-color: $ucs-color-red-2;}
-.border-t-red-3{border-top-color: $ucs-color-red-3;}
-.border-t-red-4{border-top-color: $ucs-color-red-4;}
-.border-t-red-5{border-top-color: $ucs-color-red-5;}
-.border-t-red-6{border-top-color: $ucs-color-red-6;}
-.border-t-red-7{border-top-color: $ucs-color-red-7;}
-.border-t-red-8{border-top-color: $ucs-color-red-8;}
-.border-t-red-9{border-top-color: $ucs-color-red-9;}
-.border-t-red-10{border-top-color: $ucs-color-red-10;}
+.border-t-pinkpurple{border-top-color: $ucs-color-pinkpurple;}
+.border-t-pinkpurple-1{border-top-color: $ucs-color-pinkpurple-1;}
+.border-t-pinkpurple-2{border-top-color: $ucs-color-pinkpurple-2;}
+.border-t-pinkpurple-3{border-top-color: $ucs-color-pinkpurple-3;}
+.border-t-pinkpurple-4{border-top-color: $ucs-color-pinkpurple-4;}
+.border-t-pinkpurple-5{border-top-color: $ucs-color-pinkpurple-5;}
+.border-t-pinkpurple-6{border-top-color: $ucs-color-pinkpurple-6;}
+.border-t-pinkpurple-7{border-top-color: $ucs-color-pinkpurple-7;}
+.border-t-pinkpurple-8{border-top-color: $ucs-color-pinkpurple-8;}
+.border-t-pinkpurple-9{border-top-color: $ucs-color-pinkpurple-9;}
+.border-t-pinkpurple-10{border-top-color: $ucs-color-pinkpurple-10;}
 
-.border-b-red{border-bottom-color: $ucs-color-red;}
-.border-b-red-1{border-bottom-color: $ucs-color-red-1;}
-.border-b-red-2{border-bottom-color: $ucs-color-red-2;}
-.border-b-red-3{border-bottom-color: $ucs-color-red-3;}
-.border-b-red-4{border-bottom-color: $ucs-color-red-4;}
-.border-b-red-5{border-bottom-color: $ucs-color-red-5;}
-.border-b-red-6{border-bottom-color: $ucs-color-red-6;}
-.border-b-red-7{border-bottom-color: $ucs-color-red-7;}
-.border-b-red-8{border-bottom-color: $ucs-color-red-8;}
-.border-b-red-9{border-bottom-color: $ucs-color-red-9;}
-.border-b-red-10{border-bottom-color: $ucs-color-red-10;}
+.border-b-pinkpurple{border-bottom-color: $ucs-color-pinkpurple;}
+.border-b-pinkpurple-1{border-bottom-color: $ucs-color-pinkpurple-1;}
+.border-b-pinkpurple-2{border-bottom-color: $ucs-color-pinkpurple-2;}
+.border-b-pinkpurple-3{border-bottom-color: $ucs-color-pinkpurple-3;}
+.border-b-pinkpurple-4{border-bottom-color: $ucs-color-pinkpurple-4;}
+.border-b-pinkpurple-5{border-bottom-color: $ucs-color-pinkpurple-5;}
+.border-b-pinkpurple-6{border-bottom-color: $ucs-color-pinkpurple-6;}
+.border-b-pinkpurple-7{border-bottom-color: $ucs-color-pinkpurple-7;}
+.border-b-pinkpurple-8{border-bottom-color: $ucs-color-pinkpurple-8;}
+.border-b-pinkpurple-9{border-bottom-color: $ucs-color-pinkpurple-9;}
+.border-b-pinkpurple-10{border-bottom-color: $ucs-color-pinkpurple-10;}
 
-.border-l-red{border-left-color: $ucs-color-red;}
-.border-l-red-1{border-left-color: $ucs-color-red-1;}
-.border-l-red-2{border-left-color: $ucs-color-red-2;}
-.border-l-red-3{border-left-color: $ucs-color-red-3;}
-.border-l-red-4{border-left-color: $ucs-color-red-4;}
-.border-l-red-5{border-left-color: $ucs-color-red-5;}
-.border-l-red-6{border-left-color: $ucs-color-red-6;}
-.border-l-red-7{border-left-color: $ucs-color-red-7;}
-.border-l-red-8{border-left-color: $ucs-color-red-8;}
-.border-l-red-9{border-left-color: $ucs-color-red-9;}
-.border-l-red-10{border-left-color: $ucs-color-red-10;}
+.border-l-pinkpurple{border-left-color: $ucs-color-pinkpurple;}
+.border-l-pinkpurple-1{border-left-color: $ucs-color-pinkpurple-1;}
+.border-l-pinkpurple-2{border-left-color: $ucs-color-pinkpurple-2;}
+.border-l-pinkpurple-3{border-left-color: $ucs-color-pinkpurple-3;}
+.border-l-pinkpurple-4{border-left-color: $ucs-color-pinkpurple-4;}
+.border-l-pinkpurple-5{border-left-color: $ucs-color-pinkpurple-5;}
+.border-l-pinkpurple-6{border-left-color: $ucs-color-pinkpurple-6;}
+.border-l-pinkpurple-7{border-left-color: $ucs-color-pinkpurple-7;}
+.border-l-pinkpurple-8{border-left-color: $ucs-color-pinkpurple-8;}
+.border-l-pinkpurple-9{border-left-color: $ucs-color-pinkpurple-9;}
+.border-l-pinkpurple-10{border-left-color: $ucs-color-pinkpurple-10;}
 
-.border-r-red{border-right-color: $ucs-color-red;}
-.border-r-red-1{border-right-color: $ucs-color-red-1;}
-.border-r-red-2{border-right-color: $ucs-color-red-2;}
-.border-r-red-3{border-right-color: $ucs-color-red-3;}
-.border-r-red-4{border-right-color: $ucs-color-red-4;}
-.border-r-red-5{border-right-color: $ucs-color-red-5;}
-.border-r-red-6{border-right-color: $ucs-color-red-6;}
-.border-r-red-7{border-right-color: $ucs-color-red-7;}
-.border-r-red-8{border-right-color: $ucs-color-red-8;}
-.border-r-red-9{border-right-color: $ucs-color-red-9;}
-.border-r-red-10{border-right-color: $ucs-color-red-10;}
+.border-r-pinkpurple{border-right-color: $ucs-color-pinkpurple;}
+.border-r-pinkpurple-1{border-right-color: $ucs-color-pinkpurple-1;}
+.border-r-pinkpurple-2{border-right-color: $ucs-color-pinkpurple-2;}
+.border-r-pinkpurple-3{border-right-color: $ucs-color-pinkpurple-3;}
+.border-r-pinkpurple-4{border-right-color: $ucs-color-pinkpurple-4;}
+.border-r-pinkpurple-5{border-right-color: $ucs-color-pinkpurple-5;}
+.border-r-pinkpurple-6{border-right-color: $ucs-color-pinkpurple-6;}
+.border-r-pinkpurple-7{border-right-color: $ucs-color-pinkpurple-7;}
+.border-r-pinkpurple-8{border-right-color: $ucs-color-pinkpurple-8;}
+.border-r-pinkpurple-9{border-right-color: $ucs-color-pinkpurple-9;}
+.border-r-pinkpurple-10{border-right-color: $ucs-color-pinkpurple-10;}
 
-.border-x-red{border-right-color: $ucs-color-red;border-left-color: $ucs-color-red;}
-.border-x-red-1{border-right-color: $ucs-color-red-1;border-left-color: $ucs-color-red-1;}
-.border-x-red-2{border-right-color: $ucs-color-red-2;border-left-color: $ucs-color-red-2;}
-.border-x-red-3{border-right-color: $ucs-color-red-3;border-left-color: $ucs-color-red-3;}
-.border-x-red-4{border-right-color: $ucs-color-red-4;border-left-color: $ucs-color-red-4;}
-.border-x-red-5{border-right-color: $ucs-color-red-5;border-left-color: $ucs-color-red-5;}
-.border-x-red-6{border-right-color: $ucs-color-red-6;border-left-color: $ucs-color-red-6;}
-.border-x-red-7{border-right-color: $ucs-color-red-7;border-left-color: $ucs-color-red-7;}
-.border-x-red-8{border-right-color: $ucs-color-red-8;border-left-color: $ucs-color-red-8;}
-.border-x-red-9{border-right-color: $ucs-color-red-9;border-left-color: $ucs-color-red-9;}
-.border-x-red-10{border-right-color: $ucs-color-red-10;border-left-color: $ucs-color-red-10;}
+.border-x-pinkpurple{border-right-color: $ucs-color-pinkpurple;border-left-color: $ucs-color-pinkpurple;}
+.border-x-pinkpurple-1{border-right-color: $ucs-color-pinkpurple-1;border-left-color: $ucs-color-pinkpurple-1;}
+.border-x-pinkpurple-2{border-right-color: $ucs-color-pinkpurple-2;border-left-color: $ucs-color-pinkpurple-2;}
+.border-x-pinkpurple-3{border-right-color: $ucs-color-pinkpurple-3;border-left-color: $ucs-color-pinkpurple-3;}
+.border-x-pinkpurple-4{border-right-color: $ucs-color-pinkpurple-4;border-left-color: $ucs-color-pinkpurple-4;}
+.border-x-pinkpurple-5{border-right-color: $ucs-color-pinkpurple-5;border-left-color: $ucs-color-pinkpurple-5;}
+.border-x-pinkpurple-6{border-right-color: $ucs-color-pinkpurple-6;border-left-color: $ucs-color-pinkpurple-6;}
+.border-x-pinkpurple-7{border-right-color: $ucs-color-pinkpurple-7;border-left-color: $ucs-color-pinkpurple-7;}
+.border-x-pinkpurple-8{border-right-color: $ucs-color-pinkpurple-8;border-left-color: $ucs-color-pinkpurple-8;}
+.border-x-pinkpurple-9{border-right-color: $ucs-color-pinkpurple-9;border-left-color: $ucs-color-pinkpurple-9;}
+.border-x-pinkpurple-10{border-right-color: $ucs-color-pinkpurple-10;border-left-color: $ucs-color-pinkpurple-10;}
 
-.border-y-red{border-top-color: $ucs-color-red;border-bottom-color: $ucs-color-red;}
-.border-y-red-1{border-top-color: $ucs-color-red-1;border-bottom-color: $ucs-color-red-1;}
-.border-y-red-2{border-top-color: $ucs-color-red-2;border-bottom-color: $ucs-color-red-2;}
-.border-y-red-3{border-top-color: $ucs-color-red-3;border-bottom-color: $ucs-color-red-3;}
-.border-y-red-4{border-top-color: $ucs-color-red-4;border-bottom-color: $ucs-color-red-4;}
-.border-y-red-5{border-top-color: $ucs-color-red-5;border-bottom-color: $ucs-color-red-5;}
-.border-y-red-6{border-top-color: $ucs-color-red-6;border-bottom-color: $ucs-color-red-6;}
-.border-y-red-7{border-top-color: $ucs-color-red-7;border-bottom-color: $ucs-color-red-7;}
-.border-y-red-8{border-top-color: $ucs-color-red-8;border-bottom-color: $ucs-color-red-8;}
-.border-y-red-9{border-top-color: $ucs-color-red-9;border-bottom-color: $ucs-color-red-9;}
-.border-y-red-10{border-top-color: $ucs-color-red-10;border-bottom-color: $ucs-color-red-10;}
+.border-y-pinkpurple{border-top-color: $ucs-color-pinkpurple;border-bottom-color: $ucs-color-pinkpurple;}
+.border-y-pinkpurple-1{border-top-color: $ucs-color-pinkpurple-1;border-bottom-color: $ucs-color-pinkpurple-1;}
+.border-y-pinkpurple-2{border-top-color: $ucs-color-pinkpurple-2;border-bottom-color: $ucs-color-pinkpurple-2;}
+.border-y-pinkpurple-3{border-top-color: $ucs-color-pinkpurple-3;border-bottom-color: $ucs-color-pinkpurple-3;}
+.border-y-pinkpurple-4{border-top-color: $ucs-color-pinkpurple-4;border-bottom-color: $ucs-color-pinkpurple-4;}
+.border-y-pinkpurple-5{border-top-color: $ucs-color-pinkpurple-5;border-bottom-color: $ucs-color-pinkpurple-5;}
+.border-y-pinkpurple-6{border-top-color: $ucs-color-pinkpurple-6;border-bottom-color: $ucs-color-pinkpurple-6;}
+.border-y-pinkpurple-7{border-top-color: $ucs-color-pinkpurple-7;border-bottom-color: $ucs-color-pinkpurple-7;}
+.border-y-pinkpurple-8{border-top-color: $ucs-color-pinkpurple-8;border-bottom-color: $ucs-color-pinkpurple-8;}
+.border-y-pinkpurple-9{border-top-color: $ucs-color-pinkpurple-9;border-bottom-color: $ucs-color-pinkpurple-9;}
+.border-y-pinkpurple-10{border-top-color: $ucs-color-pinkpurple-10;border-bottom-color: $ucs-color-pinkpurple-10;}
