--- a/uni_modules/ucs-css/colors/purple/index.scss
+++ b/uni_modules/ucs-css/colors/purple/index.scss
@@ -2,114 +2,114 @@
 /**
  * 背景色
  */
-.bg-red{background-color: $ucs-color-red;}
-.bg-red-1{background-color: $ucs-color-red-1;}
-.bg-red-2{background-color: $ucs-color-red-2;}
-.bg-red-3{background-color: $ucs-color-red-3;}
-.bg-red-4{background-color: $ucs-color-red-4;}
-.bg-red-5{background-color: $ucs-color-red-5;}
-.bg-red-6{background-color: $ucs-color-red-6;}
-.bg-red-7{background-color: $ucs-color-red-7;}
-.bg-red-8{background-color: $ucs-color-red-8;}
-.bg-red-9{background-color: $ucs-color-red-9;}
-.bg-red-10{background-color: $ucs-color-red-10;}
+.bg-purple{background-color: $ucs-color-purple;}
+.bg-purple-1{background-color: $ucs-color-purple-1;}
+.bg-purple-2{background-color: $ucs-color-purple-2;}
+.bg-purple-3{background-color: $ucs-color-purple-3;}
+.bg-purple-4{background-color: $ucs-color-purple-4;}
+.bg-purple-5{background-color: $ucs-color-purple-5;}
+.bg-purple-6{background-color: $ucs-color-purple-6;}
+.bg-purple-7{background-color: $ucs-color-purple-7;}
+.bg-purple-8{background-color: $ucs-color-purple-8;}
+.bg-purple-9{background-color: $ucs-color-purple-9;}
+.bg-purple-10{background-color: $ucs-color-purple-10;}
 /**
  * 文本色
  */
-.color-red{color: $ucs-color-red;}
-.color-red-1{color: $ucs-color-red-1;}
-.color-red-2{color: $ucs-color-red-2;}
-.color-red-3{color: $ucs-color-red-3;}
-.color-red-4{color: $ucs-color-red-4;}
-.color-red-5{color: $ucs-color-red-5;}
-.color-red-6{color: $ucs-color-red-6;}
-.color-red-7{color: $ucs-color-red-7;}
-.color-red-8{color: $ucs-color-red-8;}
-.color-red-9{color: $ucs-color-red-9;}
-.color-red-10{color: $ucs-color-red-10;}
+.color-purple{color: $ucs-color-purple;}
+.color-purple-1{color: $ucs-color-purple-1;}
+.color-purple-2{color: $ucs-color-purple-2;}
+.color-purple-3{color: $ucs-color-purple-3;}
+.color-purple-4{color: $ucs-color-purple-4;}
+.color-purple-5{color: $ucs-color-purple-5;}
+.color-purple-6{color: $ucs-color-purple-6;}
+.color-purple-7{color: $ucs-color-purple-7;}
+.color-purple-8{color: $ucs-color-purple-8;}
+.color-purple-9{color: $ucs-color-purple-9;}
+.color-purple-10{color: $ucs-color-purple-10;}
 /**
  * 边框色
  */
-.border-red{border-color: $ucs-color-red;}
-.border-red-1{border-color: $ucs-color-red-1;}
-.border-red-2{border-color: $ucs-color-red-2;}
-.border-red-3{border-color: $ucs-color-red-3;}
-.border-red-4{border-color: $ucs-color-red-4;}
-.border-red-5{border-color: $ucs-color-red-5;}
-.border-red-6{border-color: $ucs-color-red-6;}
-.border-red-7{border-color: $ucs-color-red-7;}
-.border-red-8{border-color: $ucs-color-red-8;}
-.border-red-9{border-color: $ucs-color-red-9;}
-.border-red-10{border-color: $ucs-color-red-10;}
+.border-purple{border-color: $ucs-color-purple;}
+.border-purple-1{border-color: $ucs-color-purple-1;}
+.border-purple-2{border-color: $ucs-color-purple-2;}
+.border-purple-3{border-color: $ucs-color-purple-3;}
+.border-purple-4{border-color: $ucs-color-purple-4;}
+.border-purple-5{border-color: $ucs-color-purple-5;}
+.border-purple-6{border-color: $ucs-color-purple-6;}
+.border-purple-7{border-color: $ucs-color-purple-7;}
+.border-purple-8{border-color: $ucs-color-purple-8;}
+.border-purple-9{border-color: $ucs-color-purple-9;}
+.border-purple-10{border-color: $ucs-color-purple-10;}
 
-.border-t-red{border-top-color: $ucs-color-red;}
-.border-t-red-1{border-top-color: $ucs-color-red-1;}
-.border-t-red-2{border-top-color: $ucs-color-red-2;}
-.border-t-red-3{border-top-color: $ucs-color-red-3;}
-.border-t-red-4{border-top-color: $ucs-color-red-4;}
-.border-t-red-5{border-top-color: $ucs-color-red-5;}
-.border-t-red-6{border-top-color: $ucs-color-red-6;}
-.border-t-red-7{border-top-color: $ucs-color-red-7;}
-.border-t-red-8{border-top-color: $ucs-color-red-8;}
-.border-t-red-9{border-top-color: $ucs-color-red-9;}
-.border-t-red-10{border-top-color: $ucs-color-red-10;}
+.border-t-purple{border-top-color: $ucs-color-purple;}
+.border-t-purple-1{border-top-color: $ucs-color-purple-1;}
+.border-t-purple-2{border-top-color: $ucs-color-purple-2;}
+.border-t-purple-3{border-top-color: $ucs-color-purple-3;}
+.border-t-purple-4{border-top-color: $ucs-color-purple-4;}
+.border-t-purple-5{border-top-color: $ucs-color-purple-5;}
+.border-t-purple-6{border-top-color: $ucs-color-purple-6;}
+.border-t-purple-7{border-top-color: $ucs-color-purple-7;}
+.border-t-purple-8{border-top-color: $ucs-color-purple-8;}
+.border-t-purple-9{border-top-color: $ucs-color-purple-9;}
+.border-t-purple-10{border-top-color: $ucs-color-purple-10;}
 
-.border-b-red{border-bottom-color: $ucs-color-red;}
-.border-b-red-1{border-bottom-color: $ucs-color-red-1;}
-.border-b-red-2{border-bottom-color: $ucs-color-red-2;}
-.border-b-red-3{border-bottom-color: $ucs-color-red-3;}
-.border-b-red-4{border-bottom-color: $ucs-color-red-4;}
-.border-b-red-5{border-bottom-color: $ucs-color-red-5;}
-.border-b-red-6{border-bottom-color: $ucs-color-red-6;}
-.border-b-red-7{border-bottom-color: $ucs-color-red-7;}
-.border-b-red-8{border-bottom-color: $ucs-color-red-8;}
-.border-b-red-9{border-bottom-color: $ucs-color-red-9;}
-.border-b-red-10{border-bottom-color: $ucs-color-red-10;}
+.border-b-purple{border-bottom-color: $ucs-color-purple;}
+.border-b-purple-1{border-bottom-color: $ucs-color-purple-1;}
+.border-b-purple-2{border-bottom-color: $ucs-color-purple-2;}
+.border-b-purple-3{border-bottom-color: $ucs-color-purple-3;}
+.border-b-purple-4{border-bottom-color: $ucs-color-purple-4;}
+.border-b-purple-5{border-bottom-color: $ucs-color-purple-5;}
+.border-b-purple-6{border-bottom-color: $ucs-color-purple-6;}
+.border-b-purple-7{border-bottom-color: $ucs-color-purple-7;}
+.border-b-purple-8{border-bottom-color: $ucs-color-purple-8;}
+.border-b-purple-9{border-bottom-color: $ucs-color-purple-9;}
+.border-b-purple-10{border-bottom-color: $ucs-color-purple-10;}
 
-.border-l-red{border-left-color: $ucs-color-red;}
-.border-l-red-1{border-left-color: $ucs-color-red-1;}
-.border-l-red-2{border-left-color: $ucs-color-red-2;}
-.border-l-red-3{border-left-color: $ucs-color-red-3;}
-.border-l-red-4{border-left-color: $ucs-color-red-4;}
-.border-l-red-5{border-left-color: $ucs-color-red-5;}
-.border-l-red-6{border-left-color: $ucs-color-red-6;}
-.border-l-red-7{border-left-color: $ucs-color-red-7;}
-.border-l-red-8{border-left-color: $ucs-color-red-8;}
-.border-l-red-9{border-left-color: $ucs-color-red-9;}
-.border-l-red-10{border-left-color: $ucs-color-red-10;}
+.border-l-purple{border-left-color: $ucs-color-purple;}
+.border-l-purple-1{border-left-color: $ucs-color-purple-1;}
+.border-l-purple-2{border-left-color: $ucs-color-purple-2;}
+.border-l-purple-3{border-left-color: $ucs-color-purple-3;}
+.border-l-purple-4{border-left-color: $ucs-color-purple-4;}
+.border-l-purple-5{border-left-color: $ucs-color-purple-5;}
+.border-l-purple-6{border-left-color: $ucs-color-purple-6;}
+.border-l-purple-7{border-left-color: $ucs-color-purple-7;}
+.border-l-purple-8{border-left-color: $ucs-color-purple-8;}
+.border-l-purple-9{border-left-color: $ucs-color-purple-9;}
+.border-l-purple-10{border-left-color: $ucs-color-purple-10;}
 
-.border-r-red{border-right-color: $ucs-color-red;}
-.border-r-red-1{border-right-color: $ucs-color-red-1;}
-.border-r-red-2{border-right-color: $ucs-color-red-2;}
-.border-r-red-3{border-right-color: $ucs-color-red-3;}
-.border-r-red-4{border-right-color: $ucs-color-red-4;}
-.border-r-red-5{border-right-color: $ucs-color-red-5;}
-.border-r-red-6{border-right-color: $ucs-color-red-6;}
-.border-r-red-7{border-right-color: $ucs-color-red-7;}
-.border-r-red-8{border-right-color: $ucs-color-red-8;}
-.border-r-red-9{border-right-color: $ucs-color-red-9;}
-.border-r-red-10{border-right-color: $ucs-color-red-10;}
+.border-r-purple{border-right-color: $ucs-color-purple;}
+.border-r-purple-1{border-right-color: $ucs-color-purple-1;}
+.border-r-purple-2{border-right-color: $ucs-color-purple-2;}
+.border-r-purple-3{border-right-color: $ucs-color-purple-3;}
+.border-r-purple-4{border-right-color: $ucs-color-purple-4;}
+.border-r-purple-5{border-right-color: $ucs-color-purple-5;}
+.border-r-purple-6{border-right-color: $ucs-color-purple-6;}
+.border-r-purple-7{border-right-color: $ucs-color-purple-7;}
+.border-r-purple-8{border-right-color: $ucs-color-purple-8;}
+.border-r-purple-9{border-right-color: $ucs-color-purple-9;}
+.border-r-purple-10{border-right-color: $ucs-color-purple-10;}
 
-.border-x-red{border-right-color: $ucs-color-red;border-left-color: $ucs-color-red;}
-.border-x-red-1{border-right-color: $ucs-color-red-1;border-left-color: $ucs-color-red-1;}
-.border-x-red-2{border-right-color: $ucs-color-red-2;border-left-color: $ucs-color-red-2;}
-.border-x-red-3{border-right-color: $ucs-color-red-3;border-left-color: $ucs-color-red-3;}
-.border-x-red-4{border-right-color: $ucs-color-red-4;border-left-color: $ucs-color-red-4;}
-.border-x-red-5{border-right-color: $ucs-color-red-5;border-left-color: $ucs-color-red-5;}
-.border-x-red-6{border-right-color: $ucs-color-red-6;border-left-color: $ucs-color-red-6;}
-.border-x-red-7{border-right-color: $ucs-color-red-7;border-left-color: $ucs-color-red-7;}
-.border-x-red-8{border-right-color: $ucs-color-red-8;border-left-color: $ucs-color-red-8;}
-.border-x-red-9{border-right-color: $ucs-color-red-9;border-left-color: $ucs-color-red-9;}
-.border-x-red-10{border-right-color: $ucs-color-red-10;border-left-color: $ucs-color-red-10;}
+.border-x-purple{border-right-color: $ucs-color-purple;border-left-color: $ucs-color-purple;}
+.border-x-purple-1{border-right-color: $ucs-color-purple-1;border-left-color: $ucs-color-purple-1;}
+.border-x-purple-2{border-right-color: $ucs-color-purple-2;border-left-color: $ucs-color-purple-2;}
+.border-x-purple-3{border-right-color: $ucs-color-purple-3;border-left-color: $ucs-color-purple-3;}
+.border-x-purple-4{border-right-color: $ucs-color-purple-4;border-left-color: $ucs-color-purple-4;}
+.border-x-purple-5{border-right-color: $ucs-color-purple-5;border-left-color: $ucs-color-purple-5;}
+.border-x-purple-6{border-right-color: $ucs-color-purple-6;border-left-color: $ucs-color-purple-6;}
+.border-x-purple-7{border-right-color: $ucs-color-purple-7;border-left-color: $ucs-color-purple-7;}
+.border-x-purple-8{border-right-color: $ucs-color-purple-8;border-left-color: $ucs-color-purple-8;}
+.border-x-purple-9{border-right-color: $ucs-color-purple-9;border-left-color: $ucs-color-purple-9;}
+.border-x-purple-10{border-right-color: $ucs-color-purple-10;border-left-color: $ucs-color-purple-10;}
 
-.border-y-red{border-top-color: $ucs-color-red;border-bottom-color: $ucs-color-red;}
-.border-y-red-1{border-top-color: $ucs-color-red-1;border-bottom-color: $ucs-color-red-1;}
-.border-y-red-2{border-top-color: $ucs-color-red-2;border-bottom-color: $ucs-color-red-2;}
-.border-y-red-3{border-top-color: $ucs-color-red-3;border-bottom-color: $ucs-color-red-3;}
-.border-y-red-4{border-top-color: $ucs-color-red-4;border-bottom-color: $ucs-color-red-4;}
-.border-y-red-5{border-top-color: $ucs-color-red-5;border-bottom-color: $ucs-color-red-5;}
-.border-y-red-6{border-top-color: $ucs-color-red-6;border-bottom-color: $ucs-color-red-6;}
-.border-y-red-7{border-top-color: $ucs-color-red-7;border-bottom-color: $ucs-color-red-7;}
-.border-y-red-8{border-top-color: $ucs-color-red-8;border-bottom-color: $ucs-color-red-8;}
-.border-y-red-9{border-top-color: $ucs-color-red-9;border-bottom-color: $ucs-color-red-9;}
-.border-y-red-10{border-top-color: $ucs-color-red-10;border-bottom-color: $ucs-color-red-10;}
+.border-y-purple{border-top-color: $ucs-color-purple;border-bottom-color: $ucs-color-purple;}
+.border-y-purple-1{border-top-color: $ucs-color-purple-1;border-bottom-color: $ucs-color-purple-1;}
+.border-y-purple-2{border-top-color: $ucs-color-purple-2;border-bottom-color: $ucs-color-purple-2;}
+.border-y-purple-3{border-top-color: $ucs-color-purple-3;border-bottom-color: $ucs-color-purple-3;}
+.border-y-purple-4{border-top-color: $ucs-color-purple-4;border-bottom-color: $ucs-color-purple-4;}
+.border-y-purple-5{border-top-color: $ucs-color-purple-5;border-bottom-color: $ucs-color-purple-5;}
+.border-y-purple-6{border-top-color: $ucs-color-purple-6;border-bottom-color: $ucs-color-purple-6;}
+.border-y-purple-7{border-top-color: $ucs-color-purple-7;border-bottom-color: $ucs-color-purple-7;}
+.border-y-purple-8{border-top-color: $ucs-color-purple-8;border-bottom-color: $ucs-color-purple-8;}
+.border-y-purple-9{border-top-color: $ucs-color-purple-9;border-bottom-color: $ucs-color-purple-9;}
+.border-y-purple-10{border-top-color: $ucs-color-purple-10;border-bottom-color: $ucs-color-purple-10;}
