--- a/uni_modules/ucs-css/colors/purple/var.scss
+++ b/uni_modules/ucs-css/colors/purple/var.scss
@@ -1,12 +1,12 @@
-// Red / 浪漫红
-$ucs-color-red: #F53F3F;
-$ucs-color-red-1: #FFECE8;
-$ucs-color-red-2: #FDCDC5;
-$ucs-color-red-3: #FBACA3;
-$ucs-color-red-4: #F98981;
-$ucs-color-red-5: #F76560;
-$ucs-color-red-6: #F53F3F;
-$ucs-color-red-7: #CB272D;
-$ucs-color-red-8: #A1151E;
-$ucs-color-red-9: #770813;
-$ucs-color-red-10: #4D000A;
+// Purple / 暗夜紫
+$ucs-color-purple: #722ED1 !default;
+$ucs-color-purple-1: #F5E8FF !default;
+$ucs-color-purple-2: #DDBEF6 !default;
+$ucs-color-purple-3: #C396ED !default;
+$ucs-color-purple-4: #A871E3 !default;
+$ucs-color-purple-5: #8D4EDA !default;
+$ucs-color-purple-6: #722ED1 !default;
+$ucs-color-purple-7: #551DB0 !default;
+$ucs-color-purple-8: #3C108F !default;
+$ucs-color-purple-9: #27066E !default;
+$ucs-color-purple-10: #16004D !default;
