--- a/uni_modules/ucs-css/colors/yellow/index.scss
+++ b/uni_modules/ucs-css/colors/yellow/index.scss
@@ -2,114 +2,114 @@
 /**
  * 背景色
  */
-.bg-red{background-color: $ucs-color-red;}
-.bg-red-1{background-color: $ucs-color-red-1;}
-.bg-red-2{background-color: $ucs-color-red-2;}
-.bg-red-3{background-color: $ucs-color-red-3;}
-.bg-red-4{background-color: $ucs-color-red-4;}
-.bg-red-5{background-color: $ucs-color-red-5;}
-.bg-red-6{background-color: $ucs-color-red-6;}
-.bg-red-7{background-color: $ucs-color-red-7;}
-.bg-red-8{background-color: $ucs-color-red-8;}
-.bg-red-9{background-color: $ucs-color-red-9;}
-.bg-red-10{background-color: $ucs-color-red-10;}
+.bg-yellow{background-color: $ucs-color-yellow;}
+.bg-yellow-1{background-color: $ucs-color-yellow-1;}
+.bg-yellow-2{background-color: $ucs-color-yellow-2;}
+.bg-yellow-3{background-color: $ucs-color-yellow-3;}
+.bg-yellow-4{background-color: $ucs-color-yellow-4;}
+.bg-yellow-5{background-color: $ucs-color-yellow-5;}
+.bg-yellow-6{background-color: $ucs-color-yellow-6;}
+.bg-yellow-7{background-color: $ucs-color-yellow-7;}
+.bg-yellow-8{background-color: $ucs-color-yellow-8;}
+.bg-yellow-9{background-color: $ucs-color-yellow-9;}
+.bg-yellow-10{background-color: $ucs-color-yellow-10;}
 /**
  * 文本色
  */
-.color-red{color: $ucs-color-red;}
-.color-red-1{color: $ucs-color-red-1;}
-.color-red-2{color: $ucs-color-red-2;}
-.color-red-3{color: $ucs-color-red-3;}
-.color-red-4{color: $ucs-color-red-4;}
-.color-red-5{color: $ucs-color-red-5;}
-.color-red-6{color: $ucs-color-red-6;}
-.color-red-7{color: $ucs-color-red-7;}
-.color-red-8{color: $ucs-color-red-8;}
-.color-red-9{color: $ucs-color-red-9;}
-.color-red-10{color: $ucs-color-red-10;}
+.color-yellow{color: $ucs-color-yellow;}
+.color-yellow-1{color: $ucs-color-yellow-1;}
+.color-yellow-2{color: $ucs-color-yellow-2;}
+.color-yellow-3{color: $ucs-color-yellow-3;}
+.color-yellow-4{color: $ucs-color-yellow-4;}
+.color-yellow-5{color: $ucs-color-yellow-5;}
+.color-yellow-6{color: $ucs-color-yellow-6;}
+.color-yellow-7{color: $ucs-color-yellow-7;}
+.color-yellow-8{color: $ucs-color-yellow-8;}
+.color-yellow-9{color: $ucs-color-yellow-9;}
+.color-yellow-10{color: $ucs-color-yellow-10;}
 /**
  * 边框色
  */
-.border-red{border-color: $ucs-color-red;}
-.border-red-1{border-color: $ucs-color-red-1;}
-.border-red-2{border-color: $ucs-color-red-2;}
-.border-red-3{border-color: $ucs-color-red-3;}
-.border-red-4{border-color: $ucs-color-red-4;}
-.border-red-5{border-color: $ucs-color-red-5;}
-.border-red-6{border-color: $ucs-color-red-6;}
-.border-red-7{border-color: $ucs-color-red-7;}
-.border-red-8{border-color: $ucs-color-red-8;}
-.border-red-9{border-color: $ucs-color-red-9;}
-.border-red-10{border-color: $ucs-color-red-10;}
+.border-yellow{border-color: $ucs-color-yellow;}
+.border-yellow-1{border-color: $ucs-color-yellow-1;}
+.border-yellow-2{border-color: $ucs-color-yellow-2;}
+.border-yellow-3{border-color: $ucs-color-yellow-3;}
+.border-yellow-4{border-color: $ucs-color-yellow-4;}
+.border-yellow-5{border-color: $ucs-color-yellow-5;}
+.border-yellow-6{border-color: $ucs-color-yellow-6;}
+.border-yellow-7{border-color: $ucs-color-yellow-7;}
+.border-yellow-8{border-color: $ucs-color-yellow-8;}
+.border-yellow-9{border-color: $ucs-color-yellow-9;}
+.border-yellow-10{border-color: $ucs-color-yellow-10;}
 
-.border-t-red{border-top-color: $ucs-color-red;}
-.border-t-red-1{border-top-color: $ucs-color-red-1;}
-.border-t-red-2{border-top-color: $ucs-color-red-2;}
-.border-t-red-3{border-top-color: $ucs-color-red-3;}
-.border-t-red-4{border-top-color: $ucs-color-red-4;}
-.border-t-red-5{border-top-color: $ucs-color-red-5;}
-.border-t-red-6{border-top-color: $ucs-color-red-6;}
-.border-t-red-7{border-top-color: $ucs-color-red-7;}
-.border-t-red-8{border-top-color: $ucs-color-red-8;}
-.border-t-red-9{border-top-color: $ucs-color-red-9;}
-.border-t-red-10{border-top-color: $ucs-color-red-10;}
+.border-t-yellow{border-top-color: $ucs-color-yellow;}
+.border-t-yellow-1{border-top-color: $ucs-color-yellow-1;}
+.border-t-yellow-2{border-top-color: $ucs-color-yellow-2;}
+.border-t-yellow-3{border-top-color: $ucs-color-yellow-3;}
+.border-t-yellow-4{border-top-color: $ucs-color-yellow-4;}
+.border-t-yellow-5{border-top-color: $ucs-color-yellow-5;}
+.border-t-yellow-6{border-top-color: $ucs-color-yellow-6;}
+.border-t-yellow-7{border-top-color: $ucs-color-yellow-7;}
+.border-t-yellow-8{border-top-color: $ucs-color-yellow-8;}
+.border-t-yellow-9{border-top-color: $ucs-color-yellow-9;}
+.border-t-yellow-10{border-top-color: $ucs-color-yellow-10;}
 
-.border-b-red{border-bottom-color: $ucs-color-red;}
-.border-b-red-1{border-bottom-color: $ucs-color-red-1;}
-.border-b-red-2{border-bottom-color: $ucs-color-red-2;}
-.border-b-red-3{border-bottom-color: $ucs-color-red-3;}
-.border-b-red-4{border-bottom-color: $ucs-color-red-4;}
-.border-b-red-5{border-bottom-color: $ucs-color-red-5;}
-.border-b-red-6{border-bottom-color: $ucs-color-red-6;}
-.border-b-red-7{border-bottom-color: $ucs-color-red-7;}
-.border-b-red-8{border-bottom-color: $ucs-color-red-8;}
-.border-b-red-9{border-bottom-color: $ucs-color-red-9;}
-.border-b-red-10{border-bottom-color: $ucs-color-red-10;}
+.border-b-yellow{border-bottom-color: $ucs-color-yellow;}
+.border-b-yellow-1{border-bottom-color: $ucs-color-yellow-1;}
+.border-b-yellow-2{border-bottom-color: $ucs-color-yellow-2;}
+.border-b-yellow-3{border-bottom-color: $ucs-color-yellow-3;}
+.border-b-yellow-4{border-bottom-color: $ucs-color-yellow-4;}
+.border-b-yellow-5{border-bottom-color: $ucs-color-yellow-5;}
+.border-b-yellow-6{border-bottom-color: $ucs-color-yellow-6;}
+.border-b-yellow-7{border-bottom-color: $ucs-color-yellow-7;}
+.border-b-yellow-8{border-bottom-color: $ucs-color-yellow-8;}
+.border-b-yellow-9{border-bottom-color: $ucs-color-yellow-9;}
+.border-b-yellow-10{border-bottom-color: $ucs-color-yellow-10;}
 
-.border-l-red{border-left-color: $ucs-color-red;}
-.border-l-red-1{border-left-color: $ucs-color-red-1;}
-.border-l-red-2{border-left-color: $ucs-color-red-2;}
-.border-l-red-3{border-left-color: $ucs-color-red-3;}
-.border-l-red-4{border-left-color: $ucs-color-red-4;}
-.border-l-red-5{border-left-color: $ucs-color-red-5;}
-.border-l-red-6{border-left-color: $ucs-color-red-6;}
-.border-l-red-7{border-left-color: $ucs-color-red-7;}
-.border-l-red-8{border-left-color: $ucs-color-red-8;}
-.border-l-red-9{border-left-color: $ucs-color-red-9;}
-.border-l-red-10{border-left-color: $ucs-color-red-10;}
+.border-l-yellow{border-left-color: $ucs-color-yellow;}
+.border-l-yellow-1{border-left-color: $ucs-color-yellow-1;}
+.border-l-yellow-2{border-left-color: $ucs-color-yellow-2;}
+.border-l-yellow-3{border-left-color: $ucs-color-yellow-3;}
+.border-l-yellow-4{border-left-color: $ucs-color-yellow-4;}
+.border-l-yellow-5{border-left-color: $ucs-color-yellow-5;}
+.border-l-yellow-6{border-left-color: $ucs-color-yellow-6;}
+.border-l-yellow-7{border-left-color: $ucs-color-yellow-7;}
+.border-l-yellow-8{border-left-color: $ucs-color-yellow-8;}
+.border-l-yellow-9{border-left-color: $ucs-color-yellow-9;}
+.border-l-yellow-10{border-left-color: $ucs-color-yellow-10;}
 
-.border-r-red{border-right-color: $ucs-color-red;}
-.border-r-red-1{border-right-color: $ucs-color-red-1;}
-.border-r-red-2{border-right-color: $ucs-color-red-2;}
-.border-r-red-3{border-right-color: $ucs-color-red-3;}
-.border-r-red-4{border-right-color: $ucs-color-red-4;}
-.border-r-red-5{border-right-color: $ucs-color-red-5;}
-.border-r-red-6{border-right-color: $ucs-color-red-6;}
-.border-r-red-7{border-right-color: $ucs-color-red-7;}
-.border-r-red-8{border-right-color: $ucs-color-red-8;}
-.border-r-red-9{border-right-color: $ucs-color-red-9;}
-.border-r-red-10{border-right-color: $ucs-color-red-10;}
+.border-r-yellow{border-right-color: $ucs-color-yellow;}
+.border-r-yellow-1{border-right-color: $ucs-color-yellow-1;}
+.border-r-yellow-2{border-right-color: $ucs-color-yellow-2;}
+.border-r-yellow-3{border-right-color: $ucs-color-yellow-3;}
+.border-r-yellow-4{border-right-color: $ucs-color-yellow-4;}
+.border-r-yellow-5{border-right-color: $ucs-color-yellow-5;}
+.border-r-yellow-6{border-right-color: $ucs-color-yellow-6;}
+.border-r-yellow-7{border-right-color: $ucs-color-yellow-7;}
+.border-r-yellow-8{border-right-color: $ucs-color-yellow-8;}
+.border-r-yellow-9{border-right-color: $ucs-color-yellow-9;}
+.border-r-yellow-10{border-right-color: $ucs-color-yellow-10;}
 
-.border-x-red{border-right-color: $ucs-color-red;border-left-color: $ucs-color-red;}
-.border-x-red-1{border-right-color: $ucs-color-red-1;border-left-color: $ucs-color-red-1;}
-.border-x-red-2{border-right-color: $ucs-color-red-2;border-left-color: $ucs-color-red-2;}
-.border-x-red-3{border-right-color: $ucs-color-red-3;border-left-color: $ucs-color-red-3;}
-.border-x-red-4{border-right-color: $ucs-color-red-4;border-left-color: $ucs-color-red-4;}
-.border-x-red-5{border-right-color: $ucs-color-red-5;border-left-color: $ucs-color-red-5;}
-.border-x-red-6{border-right-color: $ucs-color-red-6;border-left-color: $ucs-color-red-6;}
-.border-x-red-7{border-right-color: $ucs-color-red-7;border-left-color: $ucs-color-red-7;}
-.border-x-red-8{border-right-color: $ucs-color-red-8;border-left-color: $ucs-color-red-8;}
-.border-x-red-9{border-right-color: $ucs-color-red-9;border-left-color: $ucs-color-red-9;}
-.border-x-red-10{border-right-color: $ucs-color-red-10;border-left-color: $ucs-color-red-10;}
+.border-x-yellow{border-right-color: $ucs-color-yellow;border-left-color: $ucs-color-yellow;}
+.border-x-yellow-1{border-right-color: $ucs-color-yellow-1;border-left-color: $ucs-color-yellow-1;}
+.border-x-yellow-2{border-right-color: $ucs-color-yellow-2;border-left-color: $ucs-color-yellow-2;}
+.border-x-yellow-3{border-right-color: $ucs-color-yellow-3;border-left-color: $ucs-color-yellow-3;}
+.border-x-yellow-4{border-right-color: $ucs-color-yellow-4;border-left-color: $ucs-color-yellow-4;}
+.border-x-yellow-5{border-right-color: $ucs-color-yellow-5;border-left-color: $ucs-color-yellow-5;}
+.border-x-yellow-6{border-right-color: $ucs-color-yellow-6;border-left-color: $ucs-color-yellow-6;}
+.border-x-yellow-7{border-right-color: $ucs-color-yellow-7;border-left-color: $ucs-color-yellow-7;}
+.border-x-yellow-8{border-right-color: $ucs-color-yellow-8;border-left-color: $ucs-color-yellow-8;}
+.border-x-yellow-9{border-right-color: $ucs-color-yellow-9;border-left-color: $ucs-color-yellow-9;}
+.border-x-yellow-10{border-right-color: $ucs-color-yellow-10;border-left-color: $ucs-color-yellow-10;}
 
-.border-y-red{border-top-color: $ucs-color-red;border-bottom-color: $ucs-color-red;}
-.border-y-red-1{border-top-color: $ucs-color-red-1;border-bottom-color: $ucs-color-red-1;}
-.border-y-red-2{border-top-color: $ucs-color-red-2;border-bottom-color: $ucs-color-red-2;}
-.border-y-red-3{border-top-color: $ucs-color-red-3;border-bottom-color: $ucs-color-red-3;}
-.border-y-red-4{border-top-color: $ucs-color-red-4;border-bottom-color: $ucs-color-red-4;}
-.border-y-red-5{border-top-color: $ucs-color-red-5;border-bottom-color: $ucs-color-red-5;}
-.border-y-red-6{border-top-color: $ucs-color-red-6;border-bottom-color: $ucs-color-red-6;}
-.border-y-red-7{border-top-color: $ucs-color-red-7;border-bottom-color: $ucs-color-red-7;}
-.border-y-red-8{border-top-color: $ucs-color-red-8;border-bottom-color: $ucs-color-red-8;}
-.border-y-red-9{border-top-color: $ucs-color-red-9;border-bottom-color: $ucs-color-red-9;}
-.border-y-red-10{border-top-color: $ucs-color-red-10;border-bottom-color: $ucs-color-red-10;}
+.border-y-yellow{border-top-color: $ucs-color-yellow;border-bottom-color: $ucs-color-yellow;}
+.border-y-yellow-1{border-top-color: $ucs-color-yellow-1;border-bottom-color: $ucs-color-yellow-1;}
+.border-y-yellow-2{border-top-color: $ucs-color-yellow-2;border-bottom-color: $ucs-color-yellow-2;}
+.border-y-yellow-3{border-top-color: $ucs-color-yellow-3;border-bottom-color: $ucs-color-yellow-3;}
+.border-y-yellow-4{border-top-color: $ucs-color-yellow-4;border-bottom-color: $ucs-color-yellow-4;}
+.border-y-yellow-5{border-top-color: $ucs-color-yellow-5;border-bottom-color: $ucs-color-yellow-5;}
+.border-y-yellow-6{border-top-color: $ucs-color-yellow-6;border-bottom-color: $ucs-color-yellow-6;}
+.border-y-yellow-7{border-top-color: $ucs-color-yellow-7;border-bottom-color: $ucs-color-yellow-7;}
+.border-y-yellow-8{border-top-color: $ucs-color-yellow-8;border-bottom-color: $ucs-color-yellow-8;}
+.border-y-yellow-9{border-top-color: $ucs-color-yellow-9;border-bottom-color: $ucs-color-yellow-9;}
+.border-y-yellow-10{border-top-color: $ucs-color-yellow-10;border-bottom-color: $ucs-color-yellow-10;}
