--- a/uni_modules/ucs-css/colors/yellow/var.scss
+++ b/uni_modules/ucs-css/colors/yellow/var.scss
@@ -1,12 +1,12 @@
-// Red / 浪漫红
-$ucs-color-red: #F53F3F;
-$ucs-color-red-1: #FFECE8;
-$ucs-color-red-2: #FDCDC5;
-$ucs-color-red-3: #FBACA3;
-$ucs-color-red-4: #F98981;
-$ucs-color-red-5: #F76560;
-$ucs-color-red-6: #F53F3F;
-$ucs-color-red-7: #CB272D;
-$ucs-color-red-8: #A1151E;
-$ucs-color-red-9: #770813;
-$ucs-color-red-10: #4D000A;
+// Yellow / 柠檬黄
+$ucs-color-yellow: #FADC19 !default;
+$ucs-color-yellow-1: #FEFFE8 !default;
+$ucs-color-yellow-2: #FEFEBE !default;
+$ucs-color-yellow-3: #FDFA94 !default;
+$ucs-color-yellow-4: #FCF26B !default;
+$ucs-color-yellow-5: #FBE842 !default;
+$ucs-color-yellow-6: #FADC19 !default;
+$ucs-color-yellow-7: #CFAF0F !default;
+$ucs-color-yellow-8: #A38408 !default;
+$ucs-color-yellow-9: #785D03 !default;
+$ucs-color-yellow-10: #4D3800 !default;
