--- a/uni_modules/ucs-css/index.scss
+++ b/uni_modules/ucs-css/index.scss
@@ -1,13 +1,6 @@
-@import "./var.scss";
 // 2025-1-6 新增样式
-@import "./colors/red/index.scss";
+@import "./colors/index.scss";
 // 2024-11-1 新增样式
-@import "./scss/color.scss";
-@import "./scss/background-color.scss";
-@import "./scss/border-top-color.scss";
-@import "./scss/border-bottom-color.scss";
-@import "./scss/border-left-color.scss";
-@import "./scss/border-right-color.scss";
 @import "./scss/border-width.scss";
 @import "./scss/border-style.scss";
 // 2024-10-22 样式
