--- a/uni_modules/ucs-css/colors/arcoblue/var.scss
+++ b/uni_modules/ucs-css/colors/arcoblue/var.scss
@@ -1,12 +1,12 @@
 // Arco Blue / 极致蓝
-$ucs-color-arcoblue: #165DFF;
-$ucs-color-arcoblue-1: #E8F3FF;
-$ucs-color-arcoblue-2: #BEDAFF;
-$ucs-color-arcoblue-3: #94BFFF;
-$ucs-color-arcoblue-4: #6AA1FF;
-$ucs-color-arcoblue-5: #4080FF;
-$ucs-color-arcoblue-6: #165DFF;
-$ucs-color-arcoblue-7: #0E42D2;
-$ucs-color-arcoblue-8: #072CA6;
-$ucs-color-arcoblue-9: #031A79;
-$ucs-color-arcoblue-10: #000D4D;
+$ucs-color-arcoblue: #165DFF !default;
+$ucs-color-arcoblue-1: #E8F3FF !default;
+$ucs-color-arcoblue-2: #BEDAFF !default;
+$ucs-color-arcoblue-3: #94BFFF !default;
+$ucs-color-arcoblue-4: #6AA1FF !default;
+$ucs-color-arcoblue-5: #4080FF !default;
+$ucs-color-arcoblue-6: #165DFF !default;
+$ucs-color-arcoblue-7: #0E42D2 !default;
+$ucs-color-arcoblue-8: #072CA6 !default;
+$ucs-color-arcoblue-9: #031A79 !default;
+$ucs-color-arcoblue-10: #000D4D !default;
