--- a/uni_modules/ucs-css/colors/blue/var.scss
+++ b/uni_modules/ucs-css/colors/blue/var.scss
@@ -1,12 +1,12 @@
 // Blue / 海蔚蓝
-$ucs-color-blue: #3491FA;
-$ucs-color-blue-1: #E8F7FF;
-$ucs-color-blue-2: #C3E7FE;
-$ucs-color-blue-3: #9FD4FD;
-$ucs-color-blue-4: #7BC0FC;
-$ucs-color-blue-5: #57A9FB;
-$ucs-color-blue-6: #3491FA;
-$ucs-color-blue-7: #206CCF;
-$ucs-color-blue-8: #114BA3;
-$ucs-color-blue-9: #063078;
-$ucs-color-blue-10: #001A4D;
+$ucs-color-blue: #3491FA !default;
+$ucs-color-blue-1: #E8F7FF !default;
+$ucs-color-blue-2: #C3E7FE !default;
+$ucs-color-blue-3: #9FD4FD !default;
+$ucs-color-blue-4: #7BC0FC !default;
+$ucs-color-blue-5: #57A9FB !default;
+$ucs-color-blue-6: #3491FA !default;
+$ucs-color-blue-7: #206CCF !default;
+$ucs-color-blue-8: #114BA3 !default;
+$ucs-color-blue-9: #063078 !default;
+$ucs-color-blue-10: #001A4D !default;
