--- a/uni_modules/ucs-css/colors/orange/index.scss
+++ b/uni_modules/ucs-css/colors/orange/index.scss
@@ -2,114 +2,114 @@
 /**
  * 背景色
  */
-.bg-red{background-color: $ucs-color-red;}
-.bg-red-1{background-color: $ucs-color-red-1;}
-.bg-red-2{background-color: $ucs-color-red-2;}
-.bg-red-3{background-color: $ucs-color-red-3;}
-.bg-red-4{background-color: $ucs-color-red-4;}
-.bg-red-5{background-color: $ucs-color-red-5;}
-.bg-red-6{background-color: $ucs-color-red-6;}
-.bg-red-7{background-color: $ucs-color-red-7;}
-.bg-red-8{background-color: $ucs-color-red-8;}
-.bg-red-9{background-color: $ucs-color-red-9;}
-.bg-red-10{background-color: $ucs-color-red-10;}
+.bg-orange{background-color: $ucs-color-orange;}
+.bg-orange-1{background-color: $ucs-color-orange-1;}
+.bg-orange-2{background-color: $ucs-color-orange-2;}
+.bg-orange-3{background-color: $ucs-color-orange-3;}
+.bg-orange-4{background-color: $ucs-color-orange-4;}
+.bg-orange-5{background-color: $ucs-color-orange-5;}
+.bg-orange-6{background-color: $ucs-color-orange-6;}
+.bg-orange-7{background-color: $ucs-color-orange-7;}
+.bg-orange-8{background-color: $ucs-color-orange-8;}
+.bg-orange-9{background-color: $ucs-color-orange-9;}
+.bg-orange-10{background-color: $ucs-color-orange-10;}
 /**
  * 文本色
  */
-.color-red{color: $ucs-color-red;}
-.color-red-1{color: $ucs-color-red-1;}
-.color-red-2{color: $ucs-color-red-2;}
-.color-red-3{color: $ucs-color-red-3;}
-.color-red-4{color: $ucs-color-red-4;}
-.color-red-5{color: $ucs-color-red-5;}
-.color-red-6{color: $ucs-color-red-6;}
-.color-red-7{color: $ucs-color-red-7;}
-.color-red-8{color: $ucs-color-red-8;}
-.color-red-9{color: $ucs-color-red-9;}
-.color-red-10{color: $ucs-color-red-10;}
+.color-orange{color: $ucs-color-orange;}
+.color-orange-1{color: $ucs-color-orange-1;}
+.color-orange-2{color: $ucs-color-orange-2;}
+.color-orange-3{color: $ucs-color-orange-3;}
+.color-orange-4{color: $ucs-color-orange-4;}
+.color-orange-5{color: $ucs-color-orange-5;}
+.color-orange-6{color: $ucs-color-orange-6;}
+.color-orange-7{color: $ucs-color-orange-7;}
+.color-orange-8{color: $ucs-color-orange-8;}
+.color-orange-9{color: $ucs-color-orange-9;}
+.color-orange-10{color: $ucs-color-orange-10;}
 /**
  * 边框色
  */
-.border-red{border-color: $ucs-color-red;}
-.border-red-1{border-color: $ucs-color-red-1;}
-.border-red-2{border-color: $ucs-color-red-2;}
-.border-red-3{border-color: $ucs-color-red-3;}
-.border-red-4{border-color: $ucs-color-red-4;}
-.border-red-5{border-color: $ucs-color-red-5;}
-.border-red-6{border-color: $ucs-color-red-6;}
-.border-red-7{border-color: $ucs-color-red-7;}
-.border-red-8{border-color: $ucs-color-red-8;}
-.border-red-9{border-color: $ucs-color-red-9;}
-.border-red-10{border-color: $ucs-color-red-10;}
+.border-orange{border-color: $ucs-color-orange;}
+.border-orange-1{border-color: $ucs-color-orange-1;}
+.border-orange-2{border-color: $ucs-color-orange-2;}
+.border-orange-3{border-color: $ucs-color-orange-3;}
+.border-orange-4{border-color: $ucs-color-orange-4;}
+.border-orange-5{border-color: $ucs-color-orange-5;}
+.border-orange-6{border-color: $ucs-color-orange-6;}
+.border-orange-7{border-color: $ucs-color-orange-7;}
+.border-orange-8{border-color: $ucs-color-orange-8;}
+.border-orange-9{border-color: $ucs-color-orange-9;}
+.border-orange-10{border-color: $ucs-color-orange-10;}
 
-.border-t-red{border-top-color: $ucs-color-red;}
-.border-t-red-1{border-top-color: $ucs-color-red-1;}
-.border-t-red-2{border-top-color: $ucs-color-red-2;}
-.border-t-red-3{border-top-color: $ucs-color-red-3;}
-.border-t-red-4{border-top-color: $ucs-color-red-4;}
-.border-t-red-5{border-top-color: $ucs-color-red-5;}
-.border-t-red-6{border-top-color: $ucs-color-red-6;}
-.border-t-red-7{border-top-color: $ucs-color-red-7;}
-.border-t-red-8{border-top-color: $ucs-color-red-8;}
-.border-t-red-9{border-top-color: $ucs-color-red-9;}
-.border-t-red-10{border-top-color: $ucs-color-red-10;}
+.border-t-orange{border-top-color: $ucs-color-orange;}
+.border-t-orange-1{border-top-color: $ucs-color-orange-1;}
+.border-t-orange-2{border-top-color: $ucs-color-orange-2;}
+.border-t-orange-3{border-top-color: $ucs-color-orange-3;}
+.border-t-orange-4{border-top-color: $ucs-color-orange-4;}
+.border-t-orange-5{border-top-color: $ucs-color-orange-5;}
+.border-t-orange-6{border-top-color: $ucs-color-orange-6;}
+.border-t-orange-7{border-top-color: $ucs-color-orange-7;}
+.border-t-orange-8{border-top-color: $ucs-color-orange-8;}
+.border-t-orange-9{border-top-color: $ucs-color-orange-9;}
+.border-t-orange-10{border-top-color: $ucs-color-orange-10;}
 
-.border-b-red{border-bottom-color: $ucs-color-red;}
-.border-b-red-1{border-bottom-color: $ucs-color-red-1;}
-.border-b-red-2{border-bottom-color: $ucs-color-red-2;}
-.border-b-red-3{border-bottom-color: $ucs-color-red-3;}
-.border-b-red-4{border-bottom-color: $ucs-color-red-4;}
-.border-b-red-5{border-bottom-color: $ucs-color-red-5;}
-.border-b-red-6{border-bottom-color: $ucs-color-red-6;}
-.border-b-red-7{border-bottom-color: $ucs-color-red-7;}
-.border-b-red-8{border-bottom-color: $ucs-color-red-8;}
-.border-b-red-9{border-bottom-color: $ucs-color-red-9;}
-.border-b-red-10{border-bottom-color: $ucs-color-red-10;}
+.border-b-orange{border-bottom-color: $ucs-color-orange;}
+.border-b-orange-1{border-bottom-color: $ucs-color-orange-1;}
+.border-b-orange-2{border-bottom-color: $ucs-color-orange-2;}
+.border-b-orange-3{border-bottom-color: $ucs-color-orange-3;}
+.border-b-orange-4{border-bottom-color: $ucs-color-orange-4;}
+.border-b-orange-5{border-bottom-color: $ucs-color-orange-5;}
+.border-b-orange-6{border-bottom-color: $ucs-color-orange-6;}
+.border-b-orange-7{border-bottom-color: $ucs-color-orange-7;}
+.border-b-orange-8{border-bottom-color: $ucs-color-orange-8;}
+.border-b-orange-9{border-bottom-color: $ucs-color-orange-9;}
+.border-b-orange-10{border-bottom-color: $ucs-color-orange-10;}
 
-.border-l-red{border-left-color: $ucs-color-red;}
-.border-l-red-1{border-left-color: $ucs-color-red-1;}
-.border-l-red-2{border-left-color: $ucs-color-red-2;}
-.border-l-red-3{border-left-color: $ucs-color-red-3;}
-.border-l-red-4{border-left-color: $ucs-color-red-4;}
-.border-l-red-5{border-left-color: $ucs-color-red-5;}
-.border-l-red-6{border-left-color: $ucs-color-red-6;}
-.border-l-red-7{border-left-color: $ucs-color-red-7;}
-.border-l-red-8{border-left-color: $ucs-color-red-8;}
-.border-l-red-9{border-left-color: $ucs-color-red-9;}
-.border-l-red-10{border-left-color: $ucs-color-red-10;}
+.border-l-orange{border-left-color: $ucs-color-orange;}
+.border-l-orange-1{border-left-color: $ucs-color-orange-1;}
+.border-l-orange-2{border-left-color: $ucs-color-orange-2;}
+.border-l-orange-3{border-left-color: $ucs-color-orange-3;}
+.border-l-orange-4{border-left-color: $ucs-color-orange-4;}
+.border-l-orange-5{border-left-color: $ucs-color-orange-5;}
+.border-l-orange-6{border-left-color: $ucs-color-orange-6;}
+.border-l-orange-7{border-left-color: $ucs-color-orange-7;}
+.border-l-orange-8{border-left-color: $ucs-color-orange-8;}
+.border-l-orange-9{border-left-color: $ucs-color-orange-9;}
+.border-l-orange-10{border-left-color: $ucs-color-orange-10;}
 
-.border-r-red{border-right-color: $ucs-color-red;}
-.border-r-red-1{border-right-color: $ucs-color-red-1;}
-.border-r-red-2{border-right-color: $ucs-color-red-2;}
-.border-r-red-3{border-right-color: $ucs-color-red-3;}
-.border-r-red-4{border-right-color: $ucs-color-red-4;}
-.border-r-red-5{border-right-color: $ucs-color-red-5;}
-.border-r-red-6{border-right-color: $ucs-color-red-6;}
-.border-r-red-7{border-right-color: $ucs-color-red-7;}
-.border-r-red-8{border-right-color: $ucs-color-red-8;}
-.border-r-red-9{border-right-color: $ucs-color-red-9;}
-.border-r-red-10{border-right-color: $ucs-color-red-10;}
+.border-r-orange{border-right-color: $ucs-color-orange;}
+.border-r-orange-1{border-right-color: $ucs-color-orange-1;}
+.border-r-orange-2{border-right-color: $ucs-color-orange-2;}
+.border-r-orange-3{border-right-color: $ucs-color-orange-3;}
+.border-r-orange-4{border-right-color: $ucs-color-orange-4;}
+.border-r-orange-5{border-right-color: $ucs-color-orange-5;}
+.border-r-orange-6{border-right-color: $ucs-color-orange-6;}
+.border-r-orange-7{border-right-color: $ucs-color-orange-7;}
+.border-r-orange-8{border-right-color: $ucs-color-orange-8;}
+.border-r-orange-9{border-right-color: $ucs-color-orange-9;}
+.border-r-orange-10{border-right-color: $ucs-color-orange-10;}
 
-.border-x-red{border-right-color: $ucs-color-red;border-left-color: $ucs-color-red;}
-.border-x-red-1{border-right-color: $ucs-color-red-1;border-left-color: $ucs-color-red-1;}
-.border-x-red-2{border-right-color: $ucs-color-red-2;border-left-color: $ucs-color-red-2;}
-.border-x-red-3{border-right-color: $ucs-color-red-3;border-left-color: $ucs-color-red-3;}
-.border-x-red-4{border-right-color: $ucs-color-red-4;border-left-color: $ucs-color-red-4;}
-.border-x-red-5{border-right-color: $ucs-color-red-5;border-left-color: $ucs-color-red-5;}
-.border-x-red-6{border-right-color: $ucs-color-red-6;border-left-color: $ucs-color-red-6;}
-.border-x-red-7{border-right-color: $ucs-color-red-7;border-left-color: $ucs-color-red-7;}
-.border-x-red-8{border-right-color: $ucs-color-red-8;border-left-color: $ucs-color-red-8;}
-.border-x-red-9{border-right-color: $ucs-color-red-9;border-left-color: $ucs-color-red-9;}
-.border-x-red-10{border-right-color: $ucs-color-red-10;border-left-color: $ucs-color-red-10;}
+.border-x-orange{border-right-color: $ucs-color-orange;border-left-color: $ucs-color-orange;}
+.border-x-orange-1{border-right-color: $ucs-color-orange-1;border-left-color: $ucs-color-orange-1;}
+.border-x-orange-2{border-right-color: $ucs-color-orange-2;border-left-color: $ucs-color-orange-2;}
+.border-x-orange-3{border-right-color: $ucs-color-orange-3;border-left-color: $ucs-color-orange-3;}
+.border-x-orange-4{border-right-color: $ucs-color-orange-4;border-left-color: $ucs-color-orange-4;}
+.border-x-orange-5{border-right-color: $ucs-color-orange-5;border-left-color: $ucs-color-orange-5;}
+.border-x-orange-6{border-right-color: $ucs-color-orange-6;border-left-color: $ucs-color-orange-6;}
+.border-x-orange-7{border-right-color: $ucs-color-orange-7;border-left-color: $ucs-color-orange-7;}
+.border-x-orange-8{border-right-color: $ucs-color-orange-8;border-left-color: $ucs-color-orange-8;}
+.border-x-orange-9{border-right-color: $ucs-color-orange-9;border-left-color: $ucs-color-orange-9;}
+.border-x-orange-10{border-right-color: $ucs-color-orange-10;border-left-color: $ucs-color-orange-10;}
 
-.border-y-red{border-top-color: $ucs-color-red;border-bottom-color: $ucs-color-red;}
-.border-y-red-1{border-top-color: $ucs-color-red-1;border-bottom-color: $ucs-color-red-1;}
-.border-y-red-2{border-top-color: $ucs-color-red-2;border-bottom-color: $ucs-color-red-2;}
-.border-y-red-3{border-top-color: $ucs-color-red-3;border-bottom-color: $ucs-color-red-3;}
-.border-y-red-4{border-top-color: $ucs-color-red-4;border-bottom-color: $ucs-color-red-4;}
-.border-y-red-5{border-top-color: $ucs-color-red-5;border-bottom-color: $ucs-color-red-5;}
-.border-y-red-6{border-top-color: $ucs-color-red-6;border-bottom-color: $ucs-color-red-6;}
-.border-y-red-7{border-top-color: $ucs-color-red-7;border-bottom-color: $ucs-color-red-7;}
-.border-y-red-8{border-top-color: $ucs-color-red-8;border-bottom-color: $ucs-color-red-8;}
-.border-y-red-9{border-top-color: $ucs-color-red-9;border-bottom-color: $ucs-color-red-9;}
-.border-y-red-10{border-top-color: $ucs-color-red-10;border-bottom-color: $ucs-color-red-10;}
+.border-y-orange{border-top-color: $ucs-color-orange;border-bottom-color: $ucs-color-orange;}
+.border-y-orange-1{border-top-color: $ucs-color-orange-1;border-bottom-color: $ucs-color-orange-1;}
+.border-y-orange-2{border-top-color: $ucs-color-orange-2;border-bottom-color: $ucs-color-orange-2;}
+.border-y-orange-3{border-top-color: $ucs-color-orange-3;border-bottom-color: $ucs-color-orange-3;}
+.border-y-orange-4{border-top-color: $ucs-color-orange-4;border-bottom-color: $ucs-color-orange-4;}
+.border-y-orange-5{border-top-color: $ucs-color-orange-5;border-bottom-color: $ucs-color-orange-5;}
+.border-y-orange-6{border-top-color: $ucs-color-orange-6;border-bottom-color: $ucs-color-orange-6;}
+.border-y-orange-7{border-top-color: $ucs-color-orange-7;border-bottom-color: $ucs-color-orange-7;}
+.border-y-orange-8{border-top-color: $ucs-color-orange-8;border-bottom-color: $ucs-color-orange-8;}
+.border-y-orange-9{border-top-color: $ucs-color-orange-9;border-bottom-color: $ucs-color-orange-9;}
+.border-y-orange-10{border-top-color: $ucs-color-orange-10;border-bottom-color: $ucs-color-orange-10;}
