--- a/uni_modules/ucs-css/colors/pinkpurple/var.scss
+++ b/uni_modules/ucs-css/colors/pinkpurple/var.scss
@@ -1,12 +1,12 @@
-// Red / 浪漫红
-$ucs-color-red: #F53F3F;
-$ucs-color-red-1: #FFECE8;
-$ucs-color-red-2: #FDCDC5;
-$ucs-color-red-3: #FBACA3;
-$ucs-color-red-4: #F98981;
-$ucs-color-red-5: #F76560;
-$ucs-color-red-6: #F53F3F;
-$ucs-color-red-7: #CB272D;
-$ucs-color-red-8: #A1151E;
-$ucs-color-red-9: #770813;
-$ucs-color-red-10: #4D000A;
+// Pink Purple / 青春紫
+$ucs-color-pinkpurple: #D91AD9 !default;
+$ucs-color-pinkpurple-1: #FFE8FB !default;
+$ucs-color-pinkpurple-2: #F7BAEF !default;
+$ucs-color-pinkpurple-3: #F08EE6 !default;
+$ucs-color-pinkpurple-4: #E865DF !default;
+$ucs-color-pinkpurple-5: #E13EDB !default;
+$ucs-color-pinkpurple-6: #D91AD9 !default;
+$ucs-color-pinkpurple-7: #B010B6 !default;
+$ucs-color-pinkpurple-8: #8A0993 !default;
+$ucs-color-pinkpurple-9: #650370 !default;
+$ucs-color-pinkpurple-10: #42004D !default;
